# DingusMail

./: LICENSE.md  README.md  eml_parser_mcp.py  pyproject.toml
examples/: example_usage.py  hot_bots_in_your_area.eml  intercorn_get_your_lover_corn_for_christmas.eml
