[project]
name = "eml-parser-mcp"
version = "0.0.2"
description = "MCP server for parsing .eml email files with smart attachment organization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Pet", email = "pet@example.com" }
]

dependencies = [
    "fastmcp>=2.0.0",
    "eml_parser>=1.17.0",
]

[project.scripts]
eml-parser-mcp = "eml_parser_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
